--- a/src/index.html
+++ b/src/index.html
@@ -411,6 +411,75 @@
       </div>
     </aside>
 
+    <aside class="menu page__aside">
+      <div class="menu__content">
+        <button
+          type="button"
+          class="icon icon--close menu__close"
+        ></button>
+        <nav class="menu__nav nav">
+          <ul class="nav__list menu__list">
+            <li class="nav__item">
+              <a
+                class="nav__link"
+                href="#about"
+              >
+                About
+              </a>
+            </li>
+            <li class="nav__item">
+              <a
+                class="nav__link"
+                href="#tech"
+              >
+                Tech
+              </a>
+            </li>
+            <li class="nav__item">
+              <a
+                class="nav__link"
+                href="#benefits"
+              >
+                Benefits
+              </a>
+            </li>
+            <li class="nav__item">
+              <a
+                class="nav__link"
+                href="#contacts"
+              >
+                Contact
+              </a>
+            </li>
+            <li class="nav__item">
+              <a
+                class="nav__link"
+                href="#contacts"
+              >
+                Language
+              </a>
+            </li>
+            <li class="nav__item">
+              <a
+                class="nav__link"
+                href="#contacts"
+              >
+                FAQ
+              </a>
+            </li>
+            <li class="nav__item">
+              <a
+                class="nav__link"
+                href="#contacts"
+              >
+                Help
+              </a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </aside>
+
     <main>
       <section class="section description">
         <div class="description__wrapper-left">
@@ -552,6 +621,7 @@
         class="section about"
         id="about"
       >
+        <div class="about__counter">1/3</div>
         <div class="about__img-wrapper">
           <img
             class="section__img about__img"
