--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
       defer
     ></script>
   </head>
-  <body>
+  <body class="page">
     <header class="header">
       <div class="header__left">
         <img
